<resources>
    <string name="app_name">NaTour</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_routes">Itinerari</string>
    <string name="title_profile">Profilo</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_confirm_password">Conferma password</string>
    <string name="hint_confirmation_code">Inserisci il codice di verifica</string>
    <string name="button_signup_text">Registrati</string>
    <string name="button_login_text">Accedi</string>
    <string name="text_social_login">Oppure</string>
    <string name="button_signup_send_text">Registrati</string>
    <string name="forgot_password"><u>Password dimenticata?</u></string>
    <string name="resend_confirmation_code"><u>Inviami di nuovo il codice</u></string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="auth_failed_generic">Errore sconosciuto, riprova più tardi.</string>
    <string name="auth_failed_exception">Errore sconosciuto, contatta l\'assistenza.</string>
    <string name="user_not_found">Utente non trovato.</string>
    <string name="user_not_confirmed">Utente non confermato, contattare l\'assistenza.</string>
    <string name="username_exists">Username già esistente.</string>
    <string name="password_not_valid_for_user">Password non valida, riprova.</string>
    <string name="credentials_already_taken">Esiste già un utente con queste credenziali, riprova.</string>
    <string name="incorrect_parameters">Uno o più campi non sono corretti, riprova.</string>
    <string name="error_confirmation_code_deliver">C\'è stato un errore nella consegna del codice, richiedine un altro.</string>
    <string name="wrong_confirmation_code">Codice di conferma non valido, riprova.</string>
    <string name="expired_confirmation_code">Il codice di conferma è scaduto, richiedine un altro.</string>
    <string name="unknown_error">Errore sconosciuto, contatta un amministratore</string>
    <string name="cover_authentication">Cover login</string>
    <string name="logo_app">Logo App</string>
    <string name="logo_google">Logo Google</string>
    <string name="logo_facebook">Logo Facebook</string>
    <string name="data_corrupted">Try to reinstall app, data may be corrupted</string>
    <string name="retrofit_http_error">Unexpected error, retry</string>
    <string name="internet_error">Controlla la tua connessione ad internet</string>
    <string name="bad_request">Operazione effettuata non valida, controlla le informazioni inserite</string>
    <string name="forbidden">Non hai i permessi necessari per effettuare l\'operazione</string>
    <string name="conflict">Non è possibile completare l\'operazione, questo elemento esiste già!</string>
    <string name="internal_error">Il Server non può elaborare la richiesta al momento, riprova più tardi</string>
    <string name="not_acceptable">Richiesta non valida, aggiorna l\'app</string>
    <string name="not_found">Non ci sono risultati</string>
    <string name="service_unavailable">Servizio non disponibile, riprova più tardi</string>
    <string name="timeout">Timeout della richiesta, riprova</string>
    <string name="unauthorized">Non sei autenticato correttamente per l\'utilizzo dei servizi</string>
    <string name="confirmed_account">Account confermato, effettua l\'accesso!</string>
    <string name="code_resent">Il codice è stato inviato di nuovo.</string>
    <string name="button_confirm_text">Conferma registrazione</string>
    <string name="cover_password">Cover password dimenticata</string>
    <string name="button_forgot_password_text">Inviami il codice di reset</string>
    <string name="login_with_google">Accedi con Google</string>
    <string name="login_with_facebook">Accedi con Facebook</string>
    <string name="sign_up_text"> <u>Registrati</u></string>
    <string name="no_account_question">Non hai un account?</string>
    <string name="button_confirm_reset_text">Conferma il reset</string>
    <string name="chip_save_text">Salva</string>
    <string name="route_placeholder_text">Itinerario</string>
    <string name="placeholder_username">\@username</string>
    <string name="chip_text_settings">Impostazioni</string>
    <string name="itinerary_placeholder">Itinerario</string>
    <string name="description_placeholder">Descrizione</string>
    <string name="wrong_credentials">Username o password non corretti, riprova.</string>
    <string name="password_length">La password deve contenere almeno 8 caratteri.</string>
    <string name="username_check">L\'username non può contenere spazi.</string>
    <string name="email_check">Email non valida.</string>
    <string name="passwords_matching">La password non corrisponde.</string>
    <string name="code_check">Il codice deve contenere 6 cifre</string>
    <string name="next_fab">Avanti</string>
    <string name="disability_friendly_info">Non accessibile a persone con disabilità</string>
    <string name="disability_friendly">Accessibilità ai disabili</string>
    <string name="easy_difficulty">Facile</string>
    <string name="intermediate_difficulty">Intermedio</string>
    <string name="difficult_difficulty">Difficile</string>
    <string name="difficulty_level_info">Livello di difficoltà</string>
    <string name="duration_hint">Durata</string>
    <string name="description_hint">Descrizione (opzionale)</string>
    <string name="title_info">Nome itinerario</string>
    <string name="disability_access">Accessibile a persone con disabilità</string>
    <string name="disability_access_denied">Non accessibile a persone con disabilità</string>
    <string name="code_resent_password">Il codice per il reset della password è stato inviato!</string>
    <string name="password_reset_success">La password è stata aggiornata con successo! Effettua l\'accesso.</string>
    <string name="insert_photos_route">Manca poco!\nInserisci fino a un massimo di <b>5 foto</b> per descrivere il tuo itinerario.</string>
    <string name="select_images">Seleziona immagini</string>
    <string name="done_select_photos">Fatto</string>
    <string name="no_more_photo">Non puoi selezionare altre foto</string>
    <string name="insert_post_photos">Manca poco!\nInserisci fino a un massimo di <b>5 foto</b> per descrivere il tuo post.</string>
    <string name="confirm_route_fab">Inserisci itinerario</string>
    <string name="choose_position">Scegli una posizione</string>
    <string name="duration_placeholder_details">%1$d ore</string>
    <string name="warning_not_updated_or_incorrect">Informazioni inesatte o non aggiornate</string>
    <string name="easy_label">Facile</string>
    <string name="medium_label">Intermedio</string>
    <string name="hard_label">Difficile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="compilation_created">La tua compilation è stata creata con successo!</string>
    <string name="file_not_valid">File non validi, riprova</string>
    <string name="storage_error">Impossibile accedere ai file, riprova.</string>
    <string name="route_added_compilation">Itinerario aggiunto alla compilation!</string>
    <string name="report_inserted">La tua segnalazione è stata inoltrata con successo.</string>
    <string name="rating_inserted">La tua valutazione è stata inserita con successo.</string>
    <string name="title_chat">Chat</string>
    <string name="today_chat">Oggi</string>
    <string name="yesterday_chat">Ieri</string>
    <string name="title_admin">Admin</string>
    <string name="select_single_image">Seleziona immagine</string>
    <string name="cancel_insertion">Annulla inserimento</string>
    <string name="cancel_insertion_message">Vuoi davvero uscire? Tutte le informazioni inserite saranno perse.</string>
    <string name="yes_action_dialog">Sì</string>
    <string name="no_action_dialog">No</string>
    <string name="remove_marker_dialog_title">Rimuovi marker inseriti</string>
    <string name="remove_marker_dialog_message">Vuoi davvero rimuovere tutti i marker?</string>
    <string name="save_in_compilation_dialog_title">Salva itinerario</string>
    <string name="save_in_compilation_dialog_message">Seleziona una compilation dove salvare questo itinerario</string>
    <string name="send_report_dialog_title">Invia segnalazione</string>
    <string name="send_report_dialog_message">Sei sicuro di voler segnalare questo post? Non apparirà più nel dettaglio degli itinerari.</string>
    <string name="report_action_dialog">Segnala</string>
    <string name="cancel_dialog">Annulla</string>
    <string name="post_reported_success">Grazie per la tua segnalazione, analizzeremo il post al più presto</string>
    <string name="cancel_report_dialog">Annulla segnalazione</string>
    <string name="cancel_rate_dialog">Annulla valutazione</string>
    <string name="route_removed_from_compilation">Itinerario rimosso da questa compilation.</string>
    <string name="delete_compilation_title_dialog">Elimina compilation</string>
    <string name="delete_compilation_message_dialog">Sei sicuro di voler eliminare questa compilation? Perderai anche gli itinerari salvati in essa.</string>
    <string name="remove_dialog">Elimina</string>
    <string name="compilation_deleted">Compilation eliminata con successo!</string>
    <string name="delete_post_dialog_title">Elimina post</string>
    <string name="delete_post_dialog_message">Sei sicuro di voler eliminare questo post?</string>
    <string name="deleted_post_success">Post eliminato con successo!</string>
    <string name="delete_route_dialog_title">Elimina itinerario</string>
    <string name="delete_route_dialog_message">Sei sicuro di voler eliminare questo itinerario?</string>
    <string name="deleted_route_success">Itinerario eliminato con successo!</string>
    <string name="report_deleted_success">Segnalazione eliminata con successo!</string>
    <string name="delete_report_dialog_title">Elimina segnalazione</string>
    <string name="delete_report_dialog_message">Sei sicuro di voler eliminare questa segnalazione?</string>
    <string name="cancel_update_route_dialog">Annulla modifica</string>
    <string name="updated_route">Itinerario aggiornato con successo!</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="action_settings">Impostazioni</string>
    <string name="pref_key_night" translatable="false">key_night_mode</string>
    <string name="pref_night_title">Tema</string>
    <string name="pref_night_summary">Imposta il tema dell\'app</string>
    <string name="pref_night_dialog">Imposta tema</string>
    <string name="pref_night_auto" translatable="false">auto</string>
    <string name="pref_night_on" translatable="false">on</string>
    <string name="pref_night_off" translatable="false">off</string>
    <string name="night_mode_auto">Sistema</string>
    <string name="night_mode_off">Chiaro</string>
    <string name="night_mode_on">Scuro</string>
    <string name="pref_key_logout">logout</string>
</resources>