<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="App">

        <ListPreference
            android:defaultValue="@string/pref_night_auto"
            android:dialogTitle="@string/pref_night_dialog"
            android:entries="@array/night_mode"
            android:entryValues="@array/night_mode_value"
            android:icon="@drawable/ic_outline_color_lens_24"
            android:negativeButtonText="@string/cancel_dialog"
            app:key="@string/pref_key_night"
            app:summary="@string/pref_night_summary"
            app:title="@string/pref_night_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Sessione">

        <Preference
            android:icon="@drawable/ic_baseline_logout_24"
            android:summary="Effettua il logout"
            app:key="@string/pref_key_logout"
            app:title="Esci" />

    </PreferenceCategory>

</PreferenceScreen>