<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BackgroundAlternative"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.login.LoginFragment">

    <ImageView
        android:id="@+id/image_login"
        android:layout_width="254dp"
        android:layout_height="194dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/cover_authentication"
        android:src="@drawable/ic_undraw_authentication"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_app_logo"
        style="@style/AppLogo"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/logo_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_login" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfield_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/hint_username"
        android:maxWidth="250dp"
        android:minWidth="250dp"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_app_logo">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfield_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:maxWidth="250dp"
        android:minWidth="250dp"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/textfield_username"
        app:layout_constraintStart_toStartOf="@+id/textfield_username"
        app:layout_constraintTop_toBottomOf="@+id/textfield_username">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:enabled="true"
        android:text="@string/button_login_text"
        app:layout_constraintEnd_toEndOf="@+id/textfield_password"
        app:layout_constraintStart_toStartOf="@id/textfield_password"
        app:layout_constraintTop_toBottomOf="@+id/textfield_password" />

    <TextView
        android:id="@+id/textview_forgot_password"
        style="@style/Widget.NaTour.TextWithAction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/button_login"
        app:layout_constraintStart_toStartOf="@+id/button_login"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />

    <LinearLayout
        android:id="@+id/signup_section"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/textview_forgot_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textview_forgot_password"
        app:layout_constraintTop_toBottomOf="@+id/textview_forgot_password">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account_question" />

        <TextView
            android:id="@+id/textview_signup"
            style="@style/Widget.NaTour.TextWithAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/textfield_password"
        app:layout_constraintStart_toStartOf="@id/textfield_password"
        app:layout_constraintTop_toBottomOf="@+id/signup_section">

        <View
            android:id="@+id/left_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_social_login"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

        <View
            android:id="@+id/right_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:background="@android:color/darker_gray" />

    </LinearLayout>

    <Button
        android:id="@+id/button_google"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/login_with_google"
        android:textColor="#3F4848"
        app:icon="@drawable/ic_google_logo_circle"
        app:iconSize="24dp"
        app:iconTint="@android:color/transparent"
        app:iconTintMode="add"
        app:layout_constraintEnd_toEndOf="@+id/divider"
        app:layout_constraintStart_toStartOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <Button
        android:id="@+id/button_facebook"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#1976D2"
        android:text="@string/login_with_facebook"
        app:icon="@drawable/facebook_logo_official"
        app:iconSize="24dp"
        app:iconTint="@android:color/transparent"
        app:iconTintMode="add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_google"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_google"
        app:layout_constraintTop_toBottomOf="@id/button_google"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>