<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.login.forgot_password.NewPasswordFragment">

    <ImageView
        android:id="@+id/image_forgot_password"
        android:layout_width="288dp"
        android:layout_height="193dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/cover_authentication"
        android:src="@drawable/ic_undraw_forgot_password"
        app:layout_constraintBottom_toTopOf="@+id/image_app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_app_logo"
        style="@style/AppLogo"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/logo_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_forgot_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfield_confirm_code_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/hint_confirmation_code"
        android:maxWidth="250dp"
        android:minWidth="250dp"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_app_logo">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfield_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:maxWidth="250dp"
        android:minWidth="250dp"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/textfield_confirm_code_reset"
        app:layout_constraintStart_toStartOf="@+id/textfield_confirm_code_reset"
        app:layout_constraintTop_toBottomOf="@+id/textfield_confirm_code_reset">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfield_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_confirm_password"
        android:maxWidth="250dp"
        android:minWidth="250dp"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/textfield_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textfield_password"
        app:layout_constraintTop_toBottomOf="@+id/textfield_password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_reset_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:enabled="true"
        android:text="@string/button_confirm_reset_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textfield_confirm_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textfield_confirm_password"
        app:layout_constraintTop_toBottomOf="@id/textfield_confirm_password"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>