<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/BackgroundAlternative"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.login.forgot_password.ForgotPasswordFragment">

    <ImageView
        android:id="@+id/image_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/cover_password"
        android:src="@drawable/ic_undraw_forgot_password"
        app:layout_constraintBottom_toTopOf="@+id/image_app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/logo_app"
        android:src="@drawable/ic_natour_logo"
        app:layout_constraintBottom_toTopOf="@id/textfield_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_forgot_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfield_username"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:layout_marginTop="15dp"
        android:hint="@string/hint_username"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toTopOf="@id/button_send_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_app_logo">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_send_code"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="315dp"
        android:enabled="true"
        android:text="@string/button_forgot_password_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>