<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.unina.natourkt.presentation.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_routes"
        android:name="com.unina.natourkt.presentation.routes.RoutesFragment"
        android:label="@string/title_routes"
        tools:layout="@layout/fragment_routes" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.unina.natourkt.presentation.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.unina.natourkt.presentation.login.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_navigation_login_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_login_to_navigation_registration"
            app:destination="@id/navigation_registration" />
    </fragment>

    <fragment
        android:id="@+id/navigation_registration"
        android:name="com.unina.natourkt.presentation.registration.RegistrationFragment"
        android:label="Registrazione"
        tools:layout="@layout/fragment_registration" >
        <action
            android:id="@+id/action_navigation_registration_to_navigation_confirmation"
            app:destination="@id/navigation_confirmation" />
    </fragment>

    <fragment
        android:id="@+id/navigation_confirmation"
        android:name="com.unina.natourkt.presentation.registration.ConfirmationFragment"
        android:label="Conferma codice"
        tools:layout="@layout/fragment_confirmation" >
        <action
            android:id="@+id/action_navigation_confirmation_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>