<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:paddingVertical="13dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/author_photo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="#dddddd"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
                android:layout_marginEnd="16dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/author_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_username"
                    android:textColor="#dddddd"
                    android:background="#dddddd"
                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium"/>

                <TextView
                    android:id="@+id/route_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/route_placeholder_text"
                    android:background="#dddddd"
                    android:textColor="#dddddd"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"/>

            </LinearLayout>

        </LinearLayout>

        <!-- Media -->
        <ImageView
            android:id="@+id/image_slider"
            android:layout_width="match_parent"
            android:background="#dddddd"
            android:layout_height="279dp"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_placeholder"
                android:textColor="#dddddd"
                android:background="#dddddd"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"/>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>